--- a/src/components/row/Row.module.scss
+++ b/src/components/row/Row.module.scss
@@ -1,3 +1,5 @@
+@import '../../assets/styles/style.module.scss';
+
 .row {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -5,6 +7,7 @@
   padding: 0.5rem;
   margin-top: 0.5rem;
   align-items: center;
+  font-size: $fontSize;
 }
 .row__input {
   height: 20px;
@@ -12,7 +15,7 @@
   justify-self: center;
   border-radius: 10px;
   border-color: #e6e7e7;
-  
+
 }
 
 .btn {
