--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -4,6 +4,7 @@
   background-color: $backgroundColor;
   color: $fontColor;
   font-size: $fontSize;
+  font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: space-between;
