--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -7,6 +7,6 @@
 
 .table__header {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 0.3fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 0.3fr;
     font-size: $fontSize;
 }
